force-app/main/default/objects/Invoice__c/fields/Amount_Invoiced_Gross__c.field-meta.xml
<CustomField>
    <fullName>Amount_Invoiced_Gross__c</fullName>
    <label>Amount Invoiced (Gross)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>