force-app/main/default/objects/Invoice__c/fields/Bus__c.field-meta.xml
<CustomField>
    <fullName>Bus__c</fullName>
    <label>Business Unit</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>CONNECTIONS</fullName>
            </value>
            <value>
                <fullName>FORUM</fullName>
            </value>
            <value>
                <fullName>INTELLIGENCE</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>