force-app/main/default/objects/Invoice__c/fields/Connections_Hours_Used__c.field-meta.xml
<CustomField>
    <fullName>Connections_Hours_Used__c</fullName>
    <inlineHelpText>Calculated after Invoice is created with the formula Amount Invoiced (Net) / Sales Price of PAYG product on Opportunity</inlineHelpText>
    <label>Connections Hours Used</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>