force-app/main/default/objects/Invoice__c/fields/Consulting__c.field-meta.xml
<CustomField>
    <fullName>Consulting__c</fullName>
    <formula>IF(AND( text(Invoice_Type__c) =&quot;PAYG&quot;,    ISBLANK(Opportunity__c )),

TRUE, FALSE)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Consulting</label>
    <type>Checkbox</type>
</CustomField>