force-app/main/default/objects/Invoice__c/fields/Initial_HRS__c.field-meta.xml
<CustomField>
    <fullName>Initial_HRS__c</fullName>
    <label>Initial Hours</label>
    <precision>6</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>