force-app/main/default/objects/Invoice__c/fields/Intranet_Client_ID__c.field-meta.xml
<CustomField>
    <fullName>Intranet_Client_ID__c</fullName>
    <label>Intranet Client ID</label>
    <length>10</length>
    <type>Text</type>
</CustomField>