force-app/main/default/objects/Invoice__c/fields/Invoice_Amount__c.field-meta.xml
<CustomField>
    <fullName>Invoice_Amount__c</fullName>
    <label>Invoice Amount (for Roll-up)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>