force-app/main/default/objects/Invoice__c/fields/Invoice_Amt__c.field-meta.xml
<CustomField>
    <fullName>Invoice_Amt__c</fullName>
    <label>Invoice Amount (w Vat)</label>
    <precision>17</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>