force-app/main/default/objects/Invoice__c/fields/Invoice_Num__c.field-meta.xml
<CustomField>
    <fullName>Invoice_Num__c</fullName>
    <label>Invoice Number</label>
    <length>100</length>
    <type>Text</type>
</CustomField>