force-app/main/default/objects/Invoice__c/fields/Invoice_Site__c.field-meta.xml
<CustomField>
    <fullName>Invoice_Site__c</fullName>
    <label>Invoice Site</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>SHANGHAI</fullName>
            </value>
            <value>
                <fullName>LONDON</fullName>
            </value>
            <value>
                <fullName>DELHI</fullName>
            </value>
            <value>
                <fullName>NEWYORK</fullName>
            </value>
            <value>
                <fullName>CALIFORNIA</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>