force-app/main/default/objects/Invoice__c/fields/Package_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Package_End_Date__c</fullName>
    <label>Package End Date</label>
    <type>Date</type>
</CustomField>