force-app/main/default/objects/Invoice__c/fields/Package_Owner__c.field-meta.xml
<CustomField>
    <fullName>Package_Owner__c</fullName>
    <label>Package Owner</label>
    <type>TextArea</type>
</CustomField>