force-app/main/default/objects/Invoice__c/fields/Package_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Package_Start_Date__c</fullName>
    <label>Package Start Date</label>
    <type>Date</type>
</CustomField>