force-app/main/default/objects/Invoice__c/fields/Price_Per_Call__c.field-meta.xml
<CustomField>
    <fullName>Price_Per_Call__c</fullName>
    <label>Price Per Call</label>
    <precision>8</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>