force-app/main/default/objects/Invoice__c/fields/SM_Package_Owner__c.field-meta.xml
<CustomField>
    <fullName>SM_Package_Owner__c</fullName>
    <label>SM Package Owner</label>
    <length>100</length>
    <type>Text</type>
</CustomField>