force-app/main/default/objects/Invoice__c/fields/Vat_Rate__c.field-meta.xml
<CustomField>
    <fullName>Vat_Rate__c</fullName>
    <label>Vat Rate</label>
    <precision>7</precision>
    <scale>5</scale>
    <type>Number</type>
</CustomField>