force-app/main/default/objects/Invoice__c/fields/VAT_Tax_Due__c.field-meta.xml
<CustomField>
    <fullName>VAT_Tax_Due__c</fullName>
    <label>VAT / Tax Due</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>