force-app/main/default/objects/Invoice__c/recordTypes/PAYG.recordType-meta.xml
<RecordType>
    <fullName>PAYG</fullName>
    <active>true</active>
    <label>PAYG</label>
</RecordType>