force-app/main/default/objects/Invoice__c/validationRules/Invoice_Currency_the_same_as_Opp.validationRule-meta.xml
<ValidationRule>
    <fullName>Invoice_Currency_the_same_as_Opp</fullName>
    <active>true</active>
    <errorConditionFormula>TEXT(CurrencyIsoCode) &lt;&gt; TEXT(Opportunity__r.CurrencyIsoCode)</errorConditionFormula>
    <errorDisplayField>CurrencyIsoCode</errorDisplayField>
    <errorMessage>Ensure the Invoice Currency is the same as the Opportunity Currency</errorMessage>
</ValidationRule>