force-app/main/default/objects/Invoice__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>Opportunity__c</columns>
    <columns>Booking_ID__c</columns>
    <columns>Booking_Amount__c</columns>
    <columns>Invoice_Date__c</columns>
    <columns>NAME</columns>
    <columns>Package_Name__c</columns>
    <columns>Package_Start_Date__c</columns>
    <columns>Package_End_Date__c</columns>
    <columns>Invoice_Num__c</columns>
    <columns>Invoice_Price__c</columns>
    <columns>Invoice_Site__c</columns>
    <columns>Invoice_Type__c</columns>
    <columns>Type__c</columns>
    <columns>Payment_Date__c</columns>
    <columns>Payment_Amount__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Invoice_Date__c</field>
        <operation>equals</operation>
        <value>8/17/2023</value>
    </filters>
    <label>All Invoices</label>
</ListView>