force-app/main/default/objects/Invoice__c/listViews/Invoices_Missing_Booking.listView-meta.xml
<ListView>
    <fullName>Invoices_Missing_Booking</fullName>
    <columns>Invoice_Num__c</columns>
    <columns>NAME</columns>
    <columns>Initial_HRS__c</columns>
    <columns>Intranet_Client_ID__c</columns>
    <columns>Invoice_Amt__c</columns>
    <columns>Invoice_Date__c</columns>
    <columns>Invoice_Type__c</columns>
    <columns>Opportunity__c</columns>
    <columns>Opportunity_Amount__c</columns>
    <columns>Opportunity_Type__c</columns>
    <columns>Invoice_Site__c</columns>
    <columns>Invoice_Price__c</columns>
    <columns>Bus__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Booking_ID__c</field>
        <operation>equals</operation>
    </filters>
    <label>Invoices Missing Booking</label>
    <language>en_US</language>
</ListView>